rds.tf
module "rds" {
  source = "./modules/rds"
}

# modules/rds/main.tf

resource "aws_db_instance" "default" {
  allocated_storage    = 20
  storage_type         = "gp2"
  engine               = "mysql"
  engine_version       = "8.0"
  instance_class       = "db.t2.micro"
  name                 = "exampledb"
  username             = "admin"
  password             = "password"
  parameter_group_name = "default.mysql8.0"
  publicly_accessible  = true
  skip_final_snapshot  = true

  vpc_security_group_ids = [module.network.security_group_id]

  tags = {
    Name = "example-rds-instance"
  }
}
